# zero-to-prod

./: .env  .gitignore  Cargo.toml  Dockerfile  configuration.yaml  spec.yaml
.github/workflows/: general.yml
configuration/: base.yaml  production.yaml
migrations/: 20230220170556_create_subscription_tokens_table.sql  20230224182629_seed_user.sql
scripts/: init_db.sh  init_redis.sh
src/: configuration.rs  email_client.rs  main.rs  startup.rs  telemetry.rs  utils.rs
src/authentication/: middleware.rs  password.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.rs
src/routes/admin/newsletter/: post.rs
src/routes/admin/password/: get.rs  post.rs
src/routes/home/: home.html
src/routes/login/: get.rs  post.rs
tests/: health_check.rs
tests/api/: admin_dashboard.rs  change_password.rs  health_check.rs  helpers.rs  login.rs  main.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
