[package]
name = "zero-to-prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero_to_prod"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
config = "0.13"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
log = "0.4"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
# Needed to redirect log events to tracing
tracing-log = "0.1"
secrecy = { version = "0.8", features = ["serde"] }
tracing-actix-web = "0.6"
# Neeeded to correctly parse integers from env vars
serde-aux = "3"
unicode-segmentation = "1"
validator = "0.14"
rand = { version = "0.8", features = ["std_rng"] }
thiserror = "1"
anyhow = "1"
base64 = "0.13"
argon2 = { version = "0.4", features = ["std"] }
urlencoding = "2"
htmlescape = "0.3"
hmac = { version = "0.12", features = ["std"] }
sha2 = "0.10"
hex = "0.4"
actix-web-flash-messages = { version = "0.4", features = ["cookies"] }
actix-session = { version = "0.6", features = ["redis-rs-tls-session"] }
serde_json = "1"
actix-web-lab = "0.16"

[dependencies.reqwest]
version = "0.11"
default-features = false
# We need the `json` feature flag to serialize/deserialize JSON payloads
features = ["json", "rustls-tls", "cookies"]

[dependencies.sqlx]
version = "0.6"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "offline",
]

[dev-dependencies]
# Needed to invoke init_subscriber only once when running tests
once_cell = "1"
# Hepls wirting nice assertion failure messages
claim = "0.5"
fake = "~2.3"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
tokio = { version = "1", features = ["rt", "macros"] }
wiremock = "0.5"
serde_json = "1"
linkify = "0.8"
